# bioslogtriage

./: README.md  pyproject.toml
src/triage/: __init__.py  cli.py  config.py  fingerprint.py  ingest.py  normalize.py  output.py  phases.py  version.py
src/triage/llm/: evidence_pack.py  ollama_client.py  repair.py  repair_facts.py  synthesis.py  two_pass.py
src/triage/rulepacks/: faults_v1.yaml  mrc_v1.yaml  pcie_v1.yaml  storage_v1.yaml
src/triage/rules/: __init__.py  engine.py  loader.py
src/triage/schemas/: __init__.py  triage.schema.json  validate.py
src/triage/signals/: __init__.py  enrich_events.py  progress.py  stalls.py
tests/: conftest.py  test_cli.py  test_dedupe_and_evidence.py  test_evidence_pack_budgeting.py  test_llm_repair.py  test_llm_synthesis_schema.py  test_llm_two_pass.py  test_mrc_rulepack.py  test_ollama_client.py  test_output_modes.py  test_pcie_rulepack.py  test_phase_detection.py  test_progress_stall_watchdog_signals.py  test_rule_engine_faults.py  test_schema_validation.py  test_smoke.py  test_storage_rulepack.py  test_version_flag.py  tests_cli_smoke.py
