[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bioslogtriage"
version = "0.1.0"
description = "Utilities for ingesting and triaging BIOS logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "jsonschema>=4.0",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
triage = ["schemas/*.json", "rulepacks/*.yaml"]
